// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`serializeDiagramSvg > derives the legacy viewBox when no frame is stored 1`] = `
"<?xml version="1.0" encoding="UTF-8"?>
<svg xmlns="http://www.w3.org/2000/svg" viewBox="-56 -46 172 172" fill="none">
  <defs>
    <marker id="diagram-marker-arrow" markerWidth="10" markerHeight="10" refX="8.6" refY="5" markerUnits="strokeWidth" orient="auto-start-reverse">
      <path d="M1.6 1.6 8.4 5 1.6 8.4" fill="none" stroke="context-stroke" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.4" />
    </marker>
    <marker id="diagram-marker-dot" markerWidth="6" markerHeight="6" refX="3" refY="3" markerUnits="strokeWidth" orient="auto-start-reverse">
      <circle cx="3" cy="3" r="2.1" fill="context-stroke" stroke="none" />
    </marker>
    <marker id="diagram-marker-open-dot" markerWidth="7" markerHeight="7" refX="3.5" refY="3.5" markerUnits="strokeWidth" orient="auto-start-reverse">
      <circle cx="3.5" cy="3.5" r="2.45" fill="none" stroke="context-stroke" stroke-width="1.2" />
    </marker>
  </defs>
  <g fill="none" stroke-linecap="round" stroke-linejoin="round">
    <path d="M 10 20 L 50 60" stroke="#000000" stroke-width="4" marker-end="url(#diagram-marker-arrow)" />
  </g>
</svg>
"
`;

exports[`serializeDiagramSvg > serializes legacy strokes and shapes in update order 1`] = `
"<?xml version="1.0" encoding="UTF-8"?>
<svg xmlns="http://www.w3.org/2000/svg" viewBox="-10 5 320 180" fill="none">
  <defs>
    <marker id="diagram-marker-arrow" markerWidth="10" markerHeight="10" refX="8.6" refY="5" markerUnits="strokeWidth" orient="auto-start-reverse">
      <path d="M1.6 1.6 8.4 5 1.6 8.4" fill="none" stroke="context-stroke" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.4" />
    </marker>
    <marker id="diagram-marker-dot" markerWidth="6" markerHeight="6" refX="3" refY="3" markerUnits="strokeWidth" orient="auto-start-reverse">
      <circle cx="3" cy="3" r="2.1" fill="context-stroke" stroke="none" />
    </marker>
    <marker id="diagram-marker-open-dot" markerWidth="7" markerHeight="7" refX="3.5" refY="3.5" markerUnits="strokeWidth" orient="auto-start-reverse">
      <circle cx="3.5" cy="3.5" r="2.45" fill="none" stroke="context-stroke" stroke-width="1.2" />
    </marker>
  </defs>
  <g fill="none" stroke-linecap="round" stroke-linejoin="round">
    <circle cx="7.25" cy="8.50" r="1.50" fill="#abcdef" />
    <rect x="10" y="20" width="40" height="30" fill="#ffeeaa" stroke="#ff0000" stroke-width="4" stroke-dasharray="16.80 10.80" transform="rotate(30.00 30 35)" />
    <path d="M 0 10 C 3.33 13.33 11.67 29.17 20 30 C 28.33 30.83 45 17.50 50 15" stroke="#123456" stroke-width="2.50" stroke-dasharray="1.50 5.25" marker-start="url(#diagram-marker-dot)" marker-end="url(#diagram-marker-arrow)" />
    <ellipse cx="100" cy="50" rx="15" ry="10" fill="transparent" stroke="#00aa00" stroke-width="1.50" stroke-dasharray="0.52 1.88" />
    <line x1="120" y1="30" x2="180" y2="70" stroke="#0000ff" stroke-width="2" marker-start="url(#diagram-marker-open-dot)" />
    <path d="M 190 10 C 210 90 240 -20 260 60" fill="none" stroke="#765432" stroke-width="3" stroke-dasharray="12.60 8.10" marker-end="url(#diagram-marker-dot)" />
    <polygon points="30,90 60.50,100 45,130.25" fill="#eeeeee" stroke="#111111" stroke-width="1" />
  </g>
</svg>
"
`;
